@@ -441,9 +441,9 @@ CREATE TABLE `#DB_PREFIX#_Players` (
   `facebook` varchar(128) NOT NULL,
   `jabber` varchar(128) NOT NULL,
   `steamprofile` varchar(128) NOT NULL,
+  `skype` varchar(128) NOT NULL,
   `game` varchar(16) NOT NULL default '',
   `hideranking` int(1) unsigned NOT NULL default '0',
-  `lastUpdate` timestamp NOT NULL default CURRENT_TIMESTAMP on update CURRENT_TIMESTAMP,
   `isBot` int(11) NOT NULL DEFAULT '0',
   PRIMARY KEY  (`playerId`),
   KEY `clan` (`clan`),
